# Tutorial_ITK

./: CMakeLists.txt  mainTest.cpp
code/: CMakeLists.txt  mainTest.cpp  mainTest.xml
